change platformio.ini for ota

--- a/SW/WiFi-humidifier/platformio.ini
+++ b/SW/WiFi-humidifier/platformio.ini
@@ -12,3 +12,16 @@
 platform = espressif8266
 board = esp01_1m
 framework = arduino
+upload_speed = 115200
+monitor_speed = 115200 
+
+
+[env:esp01_1m_ota]
+platform = espressif8266
+board = esp01_1m
+framework = arduino
+upload_speed = 115200
+monitor_speed = 115200 
+; OTA configurations
+upload_protocol = espota
+upload_port = 192.168.68.10  ; Replace with the IP address of your ESP-01
