implemented RTC with set time on webserver

--- a/SW/WiFi-humidifier/platformio.ini
+++ b/SW/WiFi-humidifier/platformio.ini
@@ -13,15 +13,19 @@ platform = espressif8266
 board = esp01_1m
 framework = arduino
 upload_speed = 115200
-monitor_speed = 115200 
-
+monitor_speed = 115200
+lib_deps = 
+    Wire
+	northernwidget/DS3231@^1.1.2
 
 [env:esp01_1m_ota]
 platform = espressif8266
 board = esp01_1m
 framework = arduino
 upload_speed = 115200
-monitor_speed = 115200 
-; OTA configurations
+monitor_speed = 115200
 upload_protocol = espota
-upload_port = 192.168.68.10  ; Replace with the IP address of your ESP-01
+upload_port = 192.168.68.10
+lib_deps = 
+	Wire
+	northernwidget/DS3231@^1.1.2
