--- a/SW/WiFi-humidifier/platformio.ini
+++ b/SW/WiFi-humidifier/platformio.ini
@@ -15,8 +15,7 @@ framework = arduino
 upload_speed = 115200
 monitor_speed = 115200
 lib_deps = 
-    Wire
-	northernwidget/DS3231@^1.1.2
+	adafruit/RTClib@^2.1.4
 
 [env:esp01_1m_ota]
 platform = espressif8266
@@ -27,5 +26,4 @@ monitor_speed = 115200
 upload_protocol = espota
 upload_port = 192.168.68.10
 lib_deps = 
-	Wire
-	northernwidget/DS3231@^1.1.2
+	adafruit/RTClib@^2.1.4
