--- a/SW/WiFi-humidifier/platformio.ini
+++ b/SW/WiFi-humidifier/platformio.ini
@@ -16,6 +16,7 @@ upload_speed = 115200
 monitor_speed = 115200
 lib_deps = 
 	adafruit/RTClib@^2.1.4
+	bblanchon/ArduinoJson@^7.1.0
 
 [env:esp01_1m_ota]
 platform = espressif8266
@@ -27,3 +28,4 @@ upload_protocol = espota
 upload_port = 192.168.68.10
 lib_deps = 
 	adafruit/RTClib@^2.1.4
+	bblanchon/ArduinoJson@^7.1.0
