use LittleFS instead of SPIFFS

--- a/SW/WiFi-humidifier/platformio.ini
+++ b/SW/WiFi-humidifier/platformio.ini
@@ -17,6 +17,7 @@ monitor_speed = 115200
 lib_deps = 
 	adafruit/RTClib@^2.1.4
 	bblanchon/ArduinoJson@^7.1.0
+board_build.filesystem = littlefs
 
 [env:esp01_1m_ota]
 platform = espressif8266
@@ -29,3 +30,4 @@ upload_port = 192.168.68.10
 lib_deps = 
 	adafruit/RTClib@^2.1.4
 	bblanchon/ArduinoJson@^7.1.0
+board_build.filesystem = littlefs
