implemented better network login und remove old network login

--- a/SW/WiFi-humidifier/platformio.ini
+++ b/SW/WiFi-humidifier/platformio.ini
@@ -17,6 +17,7 @@ monitor_speed = 115200
 lib_deps = 
 	adafruit/RTClib@^2.1.4
 	bblanchon/ArduinoJson@^7.1.0
+	vshymanskyy/Preferences@^2.1.0
 board_build.filesystem = littlefs
 
 [env:esp01_1m_ota]
@@ -30,4 +31,5 @@ upload_port = 192.168.68.10
 lib_deps = 
 	adafruit/RTClib@^2.1.4
 	bblanchon/ArduinoJson@^7.1.0
+	vshymanskyy/Preferences@^2.1.0
 board_build.filesystem = littlefs
