change controller to nodeMCU

--- a/SW/WiFi-humidifier/platformio.ini
+++ b/SW/WiFi-humidifier/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:esp01_1m]
 platform = espressif8266
-board = esp01_1m
+board = nodemcuv2
 framework = arduino
 upload_speed = 115200
 monitor_speed = 115200
@@ -22,7 +22,7 @@ board_build.filesystem = littlefs
 
 [env:esp01_1m_ota]
 platform = espressif8266
-board = esp01_1m
+board = nodemcuv2
 framework = arduino
 upload_speed = 115200
 monitor_speed = 115200
